<resources>
    <string name="app_name">ToDo</string>
    <string name="my_cases">My cases</string>
    <string name="completed_d">Completed - %d</string>
    <string name="add_case">Add a case</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="what_to_do">What to do…</string>
    <string name="priority">Priority</string>
    <string name="no">No</string>
    <string name="make_until">Deadline</string>
    <string name="low">Low</string>
    <string name="high"><font fgcolor="@color/red">High</font></string>
    <string name="addition_error">The text field should not be empty</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="blank">Blank</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No connection</string>
    <string name="logout">Logout</string>
    <string name="login_with_yandex">Login with Yandex ID</string>
    <string name="time">Time</string>
    <string name="delay">Delay</string>
    <string name="filter">Filter</string>
</resources>