<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.ToDo.FullscreenContainer"
    tools:context=".ui.addition_fragment.AdditionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:background="?attr/fullscreenBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="start|top"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/textFillColor" />

            <TextView
                android:id="@+id/save"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:padding="5dp"
                android:background="?android:selectableItemBackground"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/todo_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edit_text_background"
                    android:elevation="3dp"
                    android:gravity="start"
                    android:hint="@string/what_to_do"
                    android:minHeight="150dp"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/priority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/todo_edit_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:textColor="?attr/textFillColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/priority_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/no"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:id="@+id/separator_0"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/separatorColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priority" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/make_until"
                    android:textColor="?attr/textFillColor"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator_0" />

                <TextView
                    android:id="@+id/deadline_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="date"
                    android:textColor="@color/blue"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/deadline_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <View
                    android:id="@+id/separator_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="?attr/separatorColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deadline_textview" />

                <LinearLayout
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="23dp"
                    android:background="?android:selectableItemBackground"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator_1">

                    <ImageView
                        android:id="@+id/delete_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delete"
                        app:tint="?attr/inactiveColor" />

                    <TextView
                        android:id="@+id/delete_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:text="@string/delete"
                        android:textColor="?attr/inactiveColor"
                        app:layout_constraintStart_toEndOf="@+id/delete_imageview"
                        app:layout_constraintTop_toTopOf="@+id/delete_imageview" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/delete_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>