<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.ToDo.FullscreenContainer"
    tools:context=".ui.settings_fragment.view.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/textFillColor" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/light_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/light"
        android:textColor="?attr/textFillColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/light_imageview"
        app:layout_constraintStart_toStartOf="@+id/light_imageview"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/dark_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dark"
        android:textColor="?attr/textFillColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/dark_imageview"
        app:layout_constraintStart_toEndOf="@+id/light_imageview"
        app:layout_constraintStart_toStartOf="@+id/dark_imageview"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/system_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/system"
        android:textColor="?attr/textFillColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/system_imageview"
        app:layout_constraintStart_toEndOf="@+id/dark_imageview"
        app:layout_constraintStart_toStartOf="@+id/system_imageview"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/light_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/light_theme"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_textview" />

    <ImageView
        android:id="@+id/dark_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/dark_theme"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/light_imageview"
        app:layout_constraintTop_toBottomOf="@+id/dark_textview" />

    <ImageView
        android:id="@+id/system_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/system_theme"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/system_textview" />

    <RadioGroup
        android:id="@+id/theme_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <RadioButton
            android:id="@+id/light_theme_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/dark_theme_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/system_theme_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/logged_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textFillColor"
        android:text="Ваше имя"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_selector"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/yandex_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="Войти с Яндекс ID"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logged_name" />

    <TextView
        android:id="@+id/yandex_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="Выйти"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logged_name" />


</androidx.constraintlayout.widget.ConstraintLayout>